# daita-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
daita/: __init__.py  execution.py
daita/agents/: __init__.py  agent.py  base.py  chat_runtime.py  conversation.py
daita/agents/chat/: __init__.py  contextvars.py  evidence.py  exit.py  facade.py  llm_turn.py  retry.py  runtime.py  state.py  tools.py
daita/agents/db/: __init__.py  audit.py  builder.py  calibration.py  catalog_freshness.py  catalog_profile.py  catalog_prompt.py  catalog_read_model.py  catalog_sampling.py  catalog_summary.py  context.py  describe.py  findings.py  memory.py  monitors.py  navigation.py  planning.py  policies.py  presets.py  prompt.py  resolve.py  result_compaction.py  run_context.py  sampling.py  schema.py  state.py  summary.py  utils.py  (+1 more)
daita/cli/: __init__.py  __main__.py  ascii_art.py  main.py  utils.py
daita/config/: __init__.py  base.py  settings.py
daita/core/: __init__.py  assertions.py  db_type_metadata.py  decision_tracing.py  exceptions.py  interfaces.py  otel_exporter.py  plugin_tracing.py  relay.py  reliability.py  scaling.py  streaming.py  tools.py  tracing.py  watch.py  workflow.py
daita/db/: __init__.py  agent.py  agent_loop.py  analysis.py  authorization.py  capabilities.py  catalog_prompt.py  context.py  context_projection.py  continuation.py  contracts.py  evidence.py  execution.py  factory.py  fallback_planner.py  fingerprints.py  governance.py  json_normalization.py  llm_agent_planner.py  llm_planner.py  llm_service.py  memory.py  memory_contracts.py  models.py  monitor_commands.py  monitor_plugin_planning.py  monitor_scheduler.py  monitors.py  plan_validation.py  planner_protocol.py  planning.py  planning_context.py  query_catalog.py  query_metadata.py  query_plan.py  query_planning.py  query_sql_validation.py  query_tool_views.py  runtime.py  runtime_extensions.py  (+6 more)
daita/display/: __init__.py  console.py
daita/embeddings/: __init__.py  base.py  factory.py  gemini.py  mock.py  openai.py  sentence_transformers.py  voyage.py
daita/evals/: __init__.py  analysis.py  artifacts.py  baselines.py  config.py  datasets.py  judges.py  models.py  reporters.py  runner.py  suite.py
daita/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  grok.py  mock.py  ollama.py  openai.py  openai_compatible.py
daita/plugins/: __init__.py  base.py  base_db.py  base_vector.py  bigquery.py  bigquery_extensions.py  catalog.py  chroma.py  chroma_extensions.py  data_quality.py  data_quality_extensions.py  elasticsearch.py  elasticsearch_extensions.py  email.py  exa.py  google_drive.py  google_drive_extensions.py  lineage.py  lineage_extensions.py  manifest.py  mcp.py  mongodb.py  mongodb_extensions.py  mysql.py  mysql_extensions.py  neo4j_graph.py  orchestrator.py  pinecone.py  pinecone_extensions.py  postgresql.py  postgresql_extensions.py  qdrant.py  qdrant_extensions.py  redis.py  redis_extensions.py  redis_messaging.py  registry.py  rest.py  s3.py  s3_extensions.py  (+8 more)
daita/runtime/: __init__.py  approvals.py  events.py  executors.py  governance.py  hosting.py  kernel.py  monitors.py  primitives.py  scheduler.py  sqlite_store.py  status.py  store.py  tool_adapters.py  workers.py
daita/skills/: __init__.py  base.py  runtime.py
daita/utils/: __init__.py
docs/: MONITOR_HOSTING.md
examples/: 00_quickstart_sqlite_from_db.py  01_inspectable_operation.py  02_catalog_assisted_joins.py  03_governed_reads_and_writes.py  04_persistent_runtime_store.py  05_data_quality_and_lineage.py  06_memory_for_business_semantics.py  07_monitor_orders.py  08_infrastructure_catalog.py  09_custom_data_plugin_extension.py  10_csv_to_sqlite_data_app.py  README.md  basic_agent.py  db_chat.py  google_drive_agent.py  local_sqlite_fixtures.py
examples/deployments/: README.md
scripts/: run_from_db_bucket3_gate.py
tests/: README.md  __init__.py  conftest.py  db_evidence_helpers.py
tests/evals/: __init__.py
tests/fixtures/: __init__.py  calculator_mcp_server.py  eval_agents.py  memory_graph_quality_cases.json  sample_data.py
tests/integration/: _harness.py  conftest.py  eval_live_factories.py  test_agent_retry_live.py  test_catalog_aws_live.py  test_catalog_azure_live.py  test_catalog_gcp_live.py  test_catalog_github_live.py  test_catalog_mongodb_live.py  test_catalog_mysql_live.py  test_catalog_postgres_live.py  test_conversation_history_live.py  test_data_quality_integration.py  test_evals_live.py  test_from_db_live.py  test_from_db_phase6_live.py  test_graph_accuracy_deep.py  test_lineage_live.py  test_llm_providers_live.py  test_memory_graph_live.py  test_transformer_integration.py
tests/mocks/: __init__.py  external_services.py  llm_providers.py
tests/performance/: test_large_from_db_benchmarks.py  test_live_agent_benchmarks.py
tests/unit/: test_agent_execution.py  test_agent_factory.py  test_agent_init.py  test_agent_tools.py  test_assertions.py  test_catalog_discoverer.py  test_catalog_normalizer.py  test_config.py  test_conversation_history.py  test_data_quality.py  test_db_query_ir.py  test_embeddings.py  test_error_paths.py  test_exceptions.py  test_focus.py  test_focus_live_llm.py  test_focus_real_world.py  test_focus_sql_backend.py  test_focus_sql_live.py  test_graph_tools.py  test_llm_base.py  test_llm_mock.py  test_llm_pricing.py  test_memory_data_ops.py  test_memory_graph.py  test_memory_graph_eval.py  test_memory_graph_quality.py  test_memory_performance.py  test_memory_reinforcement.py  test_plugin_base.py  test_plugin_catalog.py  test_plugin_email.py  test_plugin_google_drive.py  test_plugin_mongodb.py  test_plugin_neo4j.py  test_plugin_orchestrator.py  test_plugin_postgresql.py  test_plugin_qdrant.py  test_plugin_rest.py  test_plugin_s3.py  (+12 more)
typings/neo4j/: __init__.pyi
typings/tavily/: __init__.pyi
(+625 files in other folders)
